--- a/post.html
+++ b/post.html
@@ -10,6 +10,7 @@
 <body>
     <div>
         <h1>SOMOS LOS MEJORES</h1>
+        <h2>REAL MADRID CAMPIOS DE EUROPA</h2>
     </div>
 </body>
 </html>
