--- a/post.html
+++ b/post.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="cssestilos/estilos.css">
 </head>
 <body>
-    <div>
+    
+    <div id="container">
+        <div id="post"></div>
         <h1>SOMOS LOS MEJORES</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem dolorem in sit repudiandae fugiat atque, nihil ut adipisci ipsa, amet libero fuga odit. Aliquam sit commodi aut alias odio minus!</p>
     </div>
+
 </body>
 </html>
