creo la cabecera

--- a/post.html
+++ b/post.html
@@ -10,10 +10,16 @@
 <body>
     
     <div id="container">
-        <div id="post"></div>
-        <h1>SOMOS LOS MEJORES</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem dolorem in sit repudiandae fugiat atque, nihil ut adipisci ipsa, amet libero fuga odit. Aliquam sit commodi aut alias odio minus!</p>
+        <div id="cabecera">
+            inicia cabecera
+        </div>
+        <div id="post">
+            <h1>SOMOS LOS MEJORES</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem dolorem in sit repudiandae fugiat atque, nihil ut adipisci ipsa, amet libero fuga odit. Aliquam sit commodi aut alias odio minus!</p>
+       </div>
+
     </div>
+        
 
 </body>
 </html>
