hice cambios en css y html

--- a/post.html
+++ b/post.html
@@ -11,7 +11,7 @@
     
     <div id="container">
         <div id="cabecera">
-            inicia cabecera
+            hiperblog
         </div>
         <div id="post">
             <h1>SOMOS LOS MEJORES</h1>
