--- a/post.html
+++ b/post.html
@@ -11,7 +11,7 @@
     
     <div id="container">
         <div id="post"></div>
-        <h1>SOMOS LOS MEJORES</h1>
+        <h1>BIENVENIDO A HYPERBLOCK</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem dolorem in sit repudiandae fugiat atque, nihil ut adipisci ipsa, amet libero fuga odit. Aliquam sit commodi aut alias odio minus!</p>
         <p>
             somos greyka store siguenos en redes sociales @greykastore
