--- a/post.html
+++ b/post.html
@@ -16,6 +16,9 @@
         <p>
             somos greyka store siguenos en redes sociales @greykastore
         </p>
+        <div>
+            este es el footer de mi gran proyecto
+        </div>
     </div>
         
 
