agregue otra def

--- a/post.html
+++ b/post.html
@@ -17,6 +17,9 @@
             <div class="tex_cab">
                 HYPERBLOCK el mejor blog de la historia
             </div>
+            <div>
+                Somos la mejor pagina web
+            </div>
 
         </div>
        
